--- a/AcmeAuth/AcmeAuth.entitlements
+++ b/AcmeAuth/AcmeAuth.entitlements
@@ -6,6 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
+		<string>applinks:id.acme.spilikin.dev</string>
 		<string>applinks:appauth.acme.spilikin.dev</string>
 	</array>
 	<key>com.apple.developer.nfc.readersession.formats</key>
